<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditToDoActivity">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:textSize="28sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:maxLines="1"
        />



    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/etTitle"
        android:layout_above="@id/AddUpdate"
        android:layout_margin="10dp"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/AddUpdate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:background="@color/purple_700"
        />


</RelativeLayout>